ops/cd/argocd/post_installation/ingress.yaml
# https://argoproj.github.io/argo-cd/operator-manual/ingress/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
#    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
#    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.org/ssl-services: "argocd-server"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app.kubernetes.io/instance: argocd
spec:
  rules:
  - host: cd.local-1.vm
    http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: https
#  tls:
#  - hosts:
#    - cd.local-1.vm
#    secretName: argocd-secret
